--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "framer-motion": "^12.23.24",
+    "lenis": "^1.3.15",
     "lucide-react": "^0.554.0",
     "motion": "^12.23.24",
     "react": "^18.2.0",
